hide dropdown elements

--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
           id="input-destination"
           name="input-destination"
           maxlength="30"
+          autofocus="true"
         />
         <div class="dropdown">
           <button id="dropdown-btn" class="dropdown_button dropdown-btn-close dropdown-btn-open"></button>
-          <div class="dropdown-content" id="dropdown-cntnt">
-              <a class="dropdown-content_element" id="0" href="#bawcomville">Bawcomville</a>
-              <a class="dropdown-content_element" id="1" href="#rushford">Rushford</a>
-              <a class="dropdown-content_element" id="2" href="#bayview">Bayview</a>
-              <a class="dropdown-content_element" id="3" href="#heywood">Heywood</a>
-              <a class="dropdown-content_element" id="4" href="#westbrook">Westbrook</a>
-              <a class="dropdown-content_element" id="5" href="#pacifica">Pacifica</a>
-          </div>
+          <ul class="dropdown-content" id="list">
+              <li class="dropdown-content_element" id="0">Bawcomville</li>
+              <li class="dropdown-content_element" id="1">Rushford</li>
+              <li class="dropdown-content_element" id="2">Bayview</li>
+              <li class="dropdown-content_element" id="3">Heywood</li>
+              <li class="dropdown-content_element" id="4">Westbrook</li>
+              <li class="dropdown-content_element" id="5">Pacifica</li>
+          </ul>
         </div>
       </form>
     </fieldset>
