change tag button to div

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           autofocus="true"
         />
         <div class="dropdown">
-          <button id="dropdown-btn" class="dropdown_button dropdown-btn-close dropdown-btn-open"></button>
+          <div id="dropdown-btn" class="dropdown_button dropdown-btn-close"></div>
           <ul class="dropdown-content" id="list">
           </ul>
         </div>
