--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <input
           type="text"
           id="input-destination"
+          class="input"
           name="input-destination"
           maxlength="30"
           autofocus="true"
