--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Task Combobox</title>
   </head>
-  <body>
+  <body class = "body">
     <fieldset class="fieldset">
       <h3>Dropdown element</h3>
       <form action="#" method="get">
@@ -25,6 +25,6 @@
         </div>
       </form>
     </fieldset>
-    <script src="script.js"></script>
+    <script src="dist/script.js"></script>
   </body>
 </html>
